v3.7.11 (XXXX-XX-XX)
--------------------

* Retry if an ex-leader can no longer drop a follower because it is no longer
  leading.

* Make the time-to-live (TTL) value of a streaming cursor only count after the
  response has been sent to the client.

* Fix BTS-340: AQL expressions similar to `x < 3 || x` are no longer erroneously
  be reduced to `x < 3` by the optimizer rule remove-redundant-or.

* Fix BTS-374: thread race between ArangoSearch link unloading and storage
  engine WAL flushing.

* Fix crashes during arangorestore operations due to usage of wrong pointer
  value for updating user permissions.

* Fixed BTS-360 and ES-826: sporadic ArangoSearch error `Invalid RL encoding in
  'dense_fixed_offset_column_key'`.

* Add HTTP REST API endpoint POST `/_api/cursor/<cursor-id>` as a drop-in
  replacement for PUT `/_api/cursor/<cursor-id>`. The POST API is functionally
  equivalent to the existing PUT API. The benefit of using the POST API is that
  HTTP POST requests will not be considered as idempotent, so proxies may not
  retry them if they fail. This was the case with the existing PUT API, as HTTP
  PUT requests can be considered idempotent according to the HTTP specification.

  The POST API is not used internally by ArangoDB's own requests in this version.
  This means that compatibility to older versions of ArangoDB that do not
  provide the new API is ensured.

* Added option `--query.require-with` to make AQL in single server mode also
  require `WITH` clauses where the cluster would need them.
  The option is turned off by default, but can be turned on in single servers to
  remove this behavior difference between single servers and clusters, making
  later a transition from single server to cluster easier.

* Timely updates of rebootId / cluster membership of DB servers and coordinators
  in ClusterInfo. Fixes BTS-368 detected in chaos tests.

* Fix BTS-350, BTS-358: Fixed potential startup errors due to global replication